--- a/src/app/components/snippet-text/snippet-text.html
+++ b/src/app/components/snippet-text/snippet-text.html
@@ -1,3 +1,3 @@
 <div class="snippet-text-container">
-  <textarea placeholder="Enter your text..."></textarea>
+  <textarea [(ngModel)]="text" (input)="onTextChange()" placeholder="Enter your text..."></textarea>
 </div>
