--- a/src/app/components/snippet-compute/snippet-compute.html
+++ b/src/app/components/snippet-compute/snippet-compute.html
@@ -1,25 +1,15 @@
 <div class="snippet-compute-container">
-    <mat-form-field class="full-width-textarea">
-      <mat-label>Code</mat-label>
-      <textarea matInput
-                cdkTextareaAutosize
-          [(ngModel)]="value"
-                (input)="onTextChange()"
-                (ngModelChange)="onSnippetChange()"
-                placeholder="#!/usr/bin/env python3 ... #!/bin/sh ..."
-                cdkAutosizeMinRows="5"
-                cdkAutosizeMaxRows="20">
+  <mat-form-field class="full-width-textarea">
+    <mat-label>Code</mat-label>
+    <textarea matInput cdkTextareaAutosize [(ngModel)]="value" (input)="onTextChange()"
+      (ngModelChange)="onSnippetChange()" placeholder="#!/usr/bin/env python3 ... #!/bin/sh ..." cdkAutosizeMinRows="5"
+      cdkAutosizeMaxRows="20">
       </textarea>
-    </mat-form-field>
+  </mat-form-field>
   <mat-form-field class="full-width-textarea" *ngIf="output">
     <mat-label>Output</mat-label>
-    <textarea matInput
-              cdkTextareaAutosize
-              [value]="output"
-              readonly
-              cdkAutosizeMinRows="1"
-              cdkAutosizeMaxRows="20">
+    <textarea matInput cdkTextareaAutosize [value]="output" readonly cdkAutosizeMinRows="1" cdkAutosizeMaxRows="20">
     </textarea>
   </mat-form-field>
-    <button matButton="elevated" [disabled]="isPlayButtonDisabled">Play</button>
+  <button matButton="elevated" [disabled]="isPlayButtonDisabled">Play</button>
 </div>
