--- a/src/app/components/sheet/sheet.html
+++ b/src/app/components/sheet/sheet.html
@@ -16,11 +16,11 @@
       <div class="snippet-container" cdkDrag>
         @switch (snippet.type) {
         @case ('text') {
-        <app-snippet-text [id]="snippet.id" (updateSnippet)="updateSnippet($event)">
+        <app-snippet-text [id]="snippet.id" [value]="snippet.value" (updateSnippet)="updateSnippet($event)">
         </app-snippet-text>
         }
         @case ('compute') {
-        <app-snippet-compute [id]="snippet.id" (updateSnippet)="updateSnippet($event)">
+        <app-snippet-compute [id]="snippet.id" [value]="snippet.value" [output]="snippet.output" (updateSnippet)="updateSnippet($event)">
         </app-snippet-compute>
         }
         }
