Real-time file update

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -11,7 +11,7 @@
 <mat-sidenav-container class="app-sidenav-container">
   
   <mat-sidenav #fileManagerSidenav mode="side" opened position="start">
-    <app-file-manager></app-file-manager>
+    <app-file-manager [refreshTrigger]="refreshTrigger"></app-file-manager>
   </mat-sidenav>
 
   <mat-sidenav #sidenav mode="over" position="end">
