--- a/src/app/app.sass
+++ b/src/app/app.sass
@@ -30,3 +30,9 @@ mat-sidenav-content
 //   width: 250px
 //   background-color: #f0f0f0
 //   height: 100%
+
+mat-sidenav[position="start"]
+  width: 250px
+  min-width: 150px
+  resize: horizontal
+  overflow: auto
