--- a/src/app/components/snippet-compute/snippet-compute.html
+++ b/src/app/components/snippet-compute/snippet-compute.html
@@ -2,7 +2,7 @@
   <mat-form-field class="full-width-textarea">
     <mat-label>Code</mat-label>
     <textarea matInput cdkTextareaAutosize [(ngModel)]="value" (input)="onTextChange()"
-      (ngModelChange)="onSnippetChange()" placeholder="#!/usr/bin/env python3 ... #!/bin/sh ..." cdkAutosizeMinRows="5"
+      placeholder="#!/usr/bin/env python3 ... #!/bin/sh ..." cdkAutosizeMinRows="5"
       cdkAutosizeMaxRows="20">
       </textarea>
   </mat-form-field>
@@ -10,5 +10,5 @@
     <mat-label>Output</mat-label>
     <textarea matInput cdkTextareaAutosize readonly cdkAutosizeMinRows="1" cdkAutosizeMaxRows="20">{{output}}</textarea>
   </mat-form-field>
-  <button matButton="elevated" [disabled]="isPlayButtonDisabled" (click)="onPlayButtonClick()">Play</button>
+  <button mat-raised-button [disabled]="isPlayButtonDisabled" (click)="onPlayButtonClick()">Play</button>
 </div>
